<resources>
    <string name="app_name">NoteApps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home"></string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="to_share">Поделиться</string>
    <string name="customization">Настройки</string>
    <string name="about_developers">О разработчиках</string>
    <string name="output">Выход</string>
    <string name="search">Поиск заметок</string>
    <string name="notes2">Заметки</string>
    <string name="user_name">Алина Ташболотова</string>
    <string name="mail_user">ALINA.TASHBOLOTOVA@MAIL.RU</string>
    <string name="input_description">Input description</string>
    <string name="save">SAVE</string>
    <string name="support">SUPPORT</string>
    <string name="need_to_do">Нужно сделать:</string>
    <string name="string_function">Очень удобный функционал</string>
    <string name="qualitative">Быстрый,качественный продукт</string>
    <string name="skip">Пропустить</string>
    <string name="functional">Куча функции и интересных фишек</string>
    <string name="ready">Готово</string>
    <string name="txt_title">Нужно сделать:</string>
    <string name="hint_txt">Введите текст</string>
    <string name="notes">Заметки</string>
</resources>