<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/shape"
            android:iconTint="@color/silver"
            android:title="@string/to_share" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/shape2"
            android:iconTint="@color/silver"
            android:title="@string/customization" />
        <item android:title=" " />

        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/shape5"
            android:iconTint="@color/silver"
            android:title="@string/about_developers" />
        <item
            android:id="@+id/nav_controller_view_tag"
            android:icon="@drawable/shape4"
            android:iconTint="@color/silver"
            android:title="@string/output" />

    </group>
</menu>