<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.noteapps.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_formFragment"
            app:destination="@id/formFragment"
            app:enterAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_home_to_onBoardFragment"
            app:destination="@id/onBoardFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.noteapps.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.noteapps.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/formFragment"
        android:name="com.example.noteapps.ui.form.FormFragment"
        android:label="fragment_form"
        tools:layout="@layout/fragment_form" >

        <action
            android:id="@+id/action_formFragment_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/onBoardFragment"
        android:name="com.example.noteapps.onBoardd.OnBoardFragment"
        android:label="fragment_on_board"
        tools:layout="@layout/fragment_on_board" >

    </fragment>
</navigation>